# instant-repo

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: bumpversion.yaml  ci.yaml  github-cicd.yaml
author/: index.html
changelog/: index.html
docs/: author.md  index.md  license.md  motivation.md  reference.md
explanation/: index.html
how-to-guides/: index.html
license/: index.html
motivation/: index.html
reference/: index.html
scripts/cicd/setup/: install_poetry.sh  read_poetry_version.sh  read_python_version.sh
search/: search_index.json
src/app/: __init__.py  mkdocstrings_example.py
src/project_template/: __init__.py  app.py  main.py  mkdocstrings_example.py
src/project_template/commons/: __init__.py  logging_helpers.py
src/project_template/service/: __init__.py
tutorials/: index.html
