[tool.poetry]
name = "project-template"
version = "0.4.0"
description = "template for personal projects"
authors = ["niklasbaier <niklas.baier@yahoo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
types-requests = "*"
pre-commit = "*"
commitizen = "*"

[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.0"
version_files = ["pyproject.toml:^version"]
tag_format = "$version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
