[tool.poetry]
name = "project_template"
version = "0.9.2"
description = "template for personal projects"
authors = ["niklasbaier <niklas.baier@yahoo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
types-requests = "*"
pre-commit = "*"
commitizen = "*"
mkdocs-material = "*"
mkdocstrings = { extras = ["python"], version = "^0.24.1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.9.2"
tag_format = "v$version"
version_files = ["pyproject.toml:^version", "src/app/__init__.py:^__version"]
update_changelog_on_bump = true
changelog_incremental = true
changelog_merge_prerelease = true
bump_message = "bump: $current_version -> $new_version"
