[tool.poetry]
name = "project_template"
version = "0.11.8"                                # TODO: initialize to "0.1.0"
description = "template for personal projects"
authors = ["niklasbaier <niklas.baier@yahoo.de>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "*"
types-requests = "*"
pre-commit = "*"
commitizen = "*"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "*"
termynal = "*"
mkdocs-git-authors-plugin = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
mkdocs-include-markdown-plugin = "*"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.11.8"
tag_format = "v$version"
version_files = [
    "pyproject.toml:^version",
    "src/project_template/__init__.py:^__version",
    "src/project_template/__init__.py:^__project_template_version", # TODO: remove
]
update_changelog_on_bump = true
changelog_incremental = true
changelog_merge_prerelease = true
bump_message = "bump: $current_version -> $new_version"
